--- a/app/views/main.html
+++ b/app/views/main.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row">
       <div id="letters-map">
-        <span>Map of letters moving around in Europe</span>
+        <span class="date">{{current | date}}</span>
       </div>
     </div>
     <div class="container">
