--- a/app/views/main.html
+++ b/app/views/main.html
@@ -32,7 +32,7 @@
     </div>
     <div class="row">
       <div id="letters-map">
-        <span class="date">{{current | date}}</span>
+        <div class="date">{{current | date}}</div>
       </div>
     </div>
     <div class="container">
@@ -63,31 +63,42 @@
         <p><b>COST Action IS1310 Reassembling the Republic of Letters, 1500–1800</b> is therefore essentially a networking programme. It emerged in response to the expectation that that the ongoing revolution in digital communications technology can solve the scholarly problem created by the evolution of postal communication in the early modern period.</p>
       </div>
     </div>
+
+
+
     <div class="network-stage">
       <div class="row">
-        <div class="net-img-container col-sm-8">
-          <img class="img-responsive" src="images/2-net1.svg" alt="Network-1">
+        
+        <div sticky offset="0" usePlaceholder="false" confine="true" class="net-img-container col-sm-8">
+          <img id="network" src="images/2-net1.svg" class="img-responsive">
         </div>
-        <div class="col-sm-4">
-          <h4>Ricerca Autonoma</h4>
-          <h4>–</h4>
-          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        <div class="col-sm-4 col-sm-offset-8">
+          <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net1.svg">
+            <h4>2.1 Research at National Level</h4>
+            <h4>–</h4>
+            <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+          </div>
+          <div class="room h500"></div>
+          <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net2.svg">
+            <h4>2.2 Coordination of Tasks</h4>
+            <h4>–</h4>
+            <p class="description">Meeting, Working Groups (this case), etc.</p>
+          </div>
+          <div class="room h500"></div>
+          <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net3.svg">
+            <h4>2.3 Fostering Collaboration</h4>
+            <h4>–</h4>
+            <p class="description">Meeting, Working Groups (this case), etc.</p>
+          </div>
+          <div class="room h37-5vh"></div>
         </div>
       </div>
-      <div class="row">
-        <div class="net-img-container col-sm-8">
-          <img class="img-responsive" src="images/2-net2.svg" alt="Network-1">
-        </div>
-        <div class="col-sm-4">
-          <h4>Fostering Collaboration</h4>
-          <h4>–</h4>
-          <p class="description">Meeting, Working Groups (this case), etc.</p>
-        </div>
-      </div>
+
     </div>
+
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <p>[Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.]</p>
       </div>
     </div>
   </div>
@@ -95,148 +106,99 @@
 
 <section class="container-fluid"  id="section3">
   <div class=container>
+    
     <div class="row">
-        <div class="big-number col-sm-4 col-sm-offset-4">
-          <div class=""><span>3</span></div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-sm-offset-3">
-          <h2>Interdisciplinarity</h2>
-          <h3>[Subtitle]</h3>
-        </div>
-        <div class="clearfix"></div>
-        <div class="h-row col-sm-2 col-sm-offset-5"></div>
-        <div class="clearfix"></div>
-        <div class="col-sm-6 col-sm-offset-3">
-          <p>[Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor.]</p>
-        </div>
-      </div>
-      <div class="dendogram-stage">
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Four Communities</h4>
-            <h4>–</h4>
-            <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>A plenty of people</h4>
-            <h4>–</h4>
-            <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Different Roles</h4>
-            <h4>–</h4>
-            <p class="description">[...] Each Working Group breaks down these large issues into component problems and pursues consensual solutions with them in discussion with archivists, librarians, IT experts, and scholars from a variety of fields drawn from across and beyond Europe.</p>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Space and Time</h4>
-            <h4>–</h4>
-            <p class="description">WG 1 considers how to identify, represent, analyse, and visualize the data on the spatial and chronological dimensions of correspondence networks found in catalogue records, in letter texts, and in prosopographical data on letter writers and recipients.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>People and Networks</h4>
-            <h4>–</h4>
-            <p class="description">WG 2 studies how best to structure and assemble biographical data describing the citizens of the republic of letters, as well as how to structure, analyse, and visualize data on the networks created by epistolary and related forms of learned exchange.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Text and Topics</h4>
-            <h4>–</h4>
-            <p class="description">WG 3 focuses on the presentation of letters as images and digital texts, the development of tools for transcribing, annotating, editing, text mining, and topic modelling them, the translation from print to digital form and vice versa, and the use of training schools to help specify a virtual research environment adapted for the study of this material.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Documents and Collections</h4>
-            <h4>–</h4>
-            <p class="description">WG 4 will develop means of describing the physical characteristics of letters, of capturing information on their provenance history, and of assembling information on collections of learned correspondence and existing aids for finding them.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Data Exchange and Strategic Planning</h4>
-            <h4>–</h4>
-            <p class="description">WG 5 deals with the means of generating standardized digital data of all these kinds in unprecedented quantities, the technical and legal arrangements necessary for exchanging them between participating individuals, projects, and institutions, and the problems of funding and long-term preservation and sustainability.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Visualisation and Communication</h4>
-            <h4>–</h4>
-            <p class="description">WG 6 will conceptualize and specify a new generation of visualization tools applicable to all stages in the process of working with epistolary data, and will consider means of communicating both the scholarly and the technical interest of the Action to a variety of different audiences, within and especially beyond the academy.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-sm-4">
-            <h4>Affiliates and Communication</h4>
-            <h4>–</h4>
-            <p class="description">WG 6 will conceptualize and specify a new generation of visualization tools applicable to all stages in the process of working with epistolary data, and will consider means of communicating both the scholarly and the technical interest of the Action to a variety of different audiences, within and especially beyond the academy.</p>
-            <h4>–</h4>
-            <h4>Read More</h4>
-          </div>
-          <div class="dend-img-container col-sm-8">
-            <img class="img-responsive" src="" alt="Dendogram">
-          </div>
-        </div>
-
+      <div class="big-number col-sm-4 col-sm-offset-4">
+        <div class=""><span>3</span></div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-6 col-sm-offset-3">
+        <h2>Interdisciplinarity</h2>
+        <h3>[Subtitle]</h3>
+      </div>
+      <div class="clearfix"></div>
+      <div class="h-row col-sm-2 col-sm-offset-5"></div>
+      <div class="clearfix"></div>
+      <div class="col-sm-6 col-sm-offset-3">
+        <p>[Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Curabitur blandit tempus porttitor.]</p>
+      </div>
+    </div>
+       
+    <div class="row dendogram-stage">
+      <div class="col-sm-4">
+        <div class="room h37-5vh"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.1 Four Communities</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.2 A number of Collaborators</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.3 Different Roles</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.4 Space and Time</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.5 People and Network</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.6 Text and Topics</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.7 Documents and Collections</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.8 Data Exchange and Strategic Planning</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.9 Visualisation and acommunication</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h500"></div>
+        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+          <h4>3.10 Affiliates and Management Commission</h4>
+          <h4>–</h4>
+          <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+        </div>
+        <div class="room h37-5vh"></div>
+      </div> <!-- Close col-sm-4 -->
+
+      <div stickyDDD usePlaceholder="false" confine="true" sticky-class="magic-margin" class="dend-img-container col-sm-8">
+        <!-- <img id="dendogram" class="img-responsive" src="images/3-dend1.svg" alt="Dendogram"> -->
+      </div> <!-- Close col-sm-8 -->
+
+    </div> <!-- Close Row, dendogram-stage -->
+
+  </div> <!-- CONTAINER -->
+
+
 </section>
 
 <section class="container-fluid" id="section4">
