--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <h2>[Header]</h2>
-        <h3>[Header Subtitle]</h3>
+        <h2>[Cover Title]</h2>
+        <h3>[Cover Subtitle]</h3>
       </div>
     </div>
   </div>
@@ -60,7 +60,7 @@
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
-        <p><b>COST Action IS1310 Reassembling the Republic of Letters, 1500–1800</b> is therefore essentially a networking programme. It emerged in response to the expectation that that the ongoing revolution in digital communications technology can solve the scholarly problem created by the evolution of postal communication in the early modern period.</p>
+        <p><b>COST Action IS1310 Reassembling the Republic of Letters, 1500–1800</b> is therefore essentially a networking programme. It emerged in response to the expectation that that the ongoing revolution in digital communications technology can solve the scholarly problem created by the evolution of postal communication in the early modern period, thanks to the contribution of various sholars and researchers spread in different research groups.</p>
       </div>
     </div>
 
@@ -76,19 +76,19 @@
           <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net1.svg">
             <h4>2.1 Research at National Level</h4>
             <h4>–</h4>
-            <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+            <p class="description">Spread all over the coutries involved in the COST Action there are a number of reaserach centers dealing with the digital humanities, and especially with the study of correspondence. Some of those nations have a higher number of research centers then others.</p>
           </div>
           <div class="room h500"></div>
           <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net2.svg">
-            <h4>2.2 Coordination of Tasks</h4>
+            <h4>2.2 Coordination</h4>
             <h4>–</h4>
-            <p class="description">Meeting, Working Groups (this case), etc.</p>
+            <p class="description">Thanks to this COST Action, those research labs are able to connect each others. Doing so they have a chance to bring their finding to an upper level.</p>
           </div>
           <div class="room h500"></div>
           <div class="net-stage" trigger-persist="true" scroll-trigger="animateNetwork()" urlimg="images/2-net3.svg">
             <h4>2.3 Fostering Collaboration</h4>
             <h4>–</h4>
-            <p class="description">Meeting, Working Groups (this case), etc.</p>
+            <p class="description">The framework of the COST Action provides the participants with some interesting format of knowledge exchange such as conferences and meetings. Beside those, it is important to highlight that another form of collaboration comes into existence thanks to the <b>subdivision in working groups</b>, where, even if not all the participant countries are involved, the various topics of the Historiographical Agenda are addressed.</p>
           </div>
           <div class="room h37-5vh"></div>
         </div>
@@ -98,7 +98,8 @@
 
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
-        <p>[Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam quis risus eget urna mollis ornare vel eu leo. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.]</p>
+        <p>In essence, a new scholarly network is needed in order to study the older scholarly network of the early modern period. To sustain this new network, we need a new breed of digital networking tools; and the purpose of this Action is to assemble the network needed to design these tools: a network to devise a networking platform to support a network studying past networks.</p>
+        <p>COST Action does not found research itself, but provide the environment for adding up to something greater than the sum of individual parts.</p>
       </div>
     </div>
   </div>
@@ -115,7 +116,7 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h2>Interdisciplinarity</h2>
-        <h3>[Subtitle]</h3>
+        <h3>Hearth of Collaboration</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
@@ -128,69 +129,69 @@
     <div class="row dendogram-stage">
       <div class="col-sm-4">
         <div class="room h37-5vh"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds1" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds1')" stage="3-1">
           <h4>3.1 Four Communities</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds2" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds2')" stage="3-2">
           <h4>3.2 A number of Collaborators</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
-          <h4>3.3 Different Roles</h4>
+        <div id="ds3" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds3')" stage="3-1">
+          <h4>3.3 Working Groups</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds4" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds4')" stage="3-2">
           <h4>3.4 Space and Time</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds5" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds5')" stage="3-1">
           <h4>3.5 People and Network</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds6" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds6')" stage="3-2">
           <h4>3.6 Text and Topics</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds7" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds7')" stage="3-1">
           <h4>3.7 Documents and Collections</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds8" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds8')" stage="3-2">
           <h4>3.8 Data Exchange and Strategic Planning</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
+        <div id="ds9" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds9')" stage="3-1">
           <h4>3.9 Visualisation and acommunication</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h500"></div>
-        <div class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram()" urlimg="">
-          <h4>3.10 Affiliates and Management Commission</h4>
+        <div id="ds10" class="dend-stage" trigger-persist="true" scroll-trigger="animateDendogram('ds10')" stage="3-2">
+          <h4>3.10 Affiliates and Management</h4>
           <h4>–</h4>
           <p class="description">Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
         </div>
         <div class="room h37-5vh"></div>
       </div> <!-- Close col-sm-4 -->
 
-      <div stickyDDD usePlaceholder="false" confine="true" sticky-class="magic-margin" class="dend-img-container col-sm-8">
+      <div sticky usePlaceholder="false" confine="true" sticky-class="magic-margin" class="dend-img-container col-sm-8">
         <!-- <img id="dendogram" class="img-responsive" src="images/3-dend1.svg" alt="Dendogram"> -->
       </div> <!-- Close col-sm-8 -->
 
@@ -217,7 +218,11 @@
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
-        <p>[Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.]</p>
+        <p>THIS SECTION IS STILL COMPLETELY A DRAFT. [Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.]</p>
+      </div>
+      <div class="clearfix"></div>
+      <div class="col-sm-12">
+        <img src="images/4-gant0.svg" class="img-responsive">
       </div>
     </div>
   </div>
@@ -233,13 +238,13 @@
     <div class="row">
       <div class="col-sm-6 col-sm-offset-3">
         <h2>Know More</h2>
-        <h3>[Section Subtitle]</h3>
+        <h3>~</h3>
       </div>
       <div class="clearfix"></div>
       <div class="h-row col-sm-2 col-sm-offset-5"></div>
       <div class="clearfix"></div>
       <div class="col-sm-6 col-sm-offset-3">
-        <p>[Nullam quis risus eget urna mollis ornare vel eu leo. Vestibulum id ligula porta felis euismod semper. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.]</p>
+        <p>Whether you want to discover more about the work done by the COST Action "Reassembling the Republic of Letters" and know more about the upcoming and past events, or you are interest in knowing how to take part, please visit our website.</p>
         <p><a href="http://www.republicofletters.com">www.republicofletters.com</a></p>
       </div>
     </div>
